no recuerdo qué es esto

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,7 @@
     </script>
 
     <script type="module" src="../codemirror-wrapper.js"></script>
+    <!--<script type="module" src="../my-element.js"></script>-->
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
@@ -31,7 +32,8 @@
       <h3>Basic codemirror-wrapper demo</h3>
       <demo-snippet>
         <template>
-          <codemirror-wrapper value="function myScript(){return 100;}"></codemirror-wrapper>
+            <!--<my-element value="function myScript(){return 100;}"></my-element>-->
+            <codemirror-wrapper value="function myScript(){return 100;}"></codemirror-wrapper>
         </template>
       </demo-snippet>
     </div>
